feat(components/atom/tag): add key interactions

--- a/components/atom/tag/demo/index.scss
+++ b/components/atom/tag/demo/index.scss
@@ -1,6 +1,7 @@
 @import '~@s-ui/react-primitive-visually-hidden/lib/index';
 @import '~@s-ui/react-atom-icon/lib/index';
 @import '~@s-ui/react-molecule-input-tags/lib/index';
+@import '~@s-ui/react-atom-kbd/lib/index';
 
 $atom-tag-types: (
   alert: (
