add white support in atom icon

--- a/components/atom/icon/src/styles/settings.scss
+++ b/components/atom/icon/src/styles/settings.scss
@@ -14,5 +14,6 @@ $atom-icon-colors: (
   'error': $c-error,
   'primary': $c-primary,
   'success': $c-success,
-  'gray': $c-gray
+  'gray': $c-gray,
+  'white': $c-white,
 );
