--- a/components/atom/switch/src/styles/index.scss
+++ b/components/atom/switch/src/styles/index.scss
@@ -23,30 +23,27 @@ $base-class: '.sui-AtomSwitch';
     &--fullWidth {
       justify-content: space-between;
     }
-
-    &:not(#{$base-class}-container--isFitted) {
-      padding: $p-atom-switch-container;
-    }
   }
 
   .sui-AtomLabel {
     margin-bottom: 0;
   }
 
-  &-toggleType {
-    .sui-AtomLabel {
-      margin-bottom: $m-l;
+  &--design {
+    &-single {
+      .sui-AtomLabel {
+        margin-right: $m-l;
+        text-align: right;
+      }
+      #{$base-class}-inputContainer + .sui-AtomLabel {
+        margin-left: $m-l;
+        text-align: left;
+      }
     }
-  }
-
-  &-singleType {
-    .sui-AtomLabel {
-      margin-right: $m-l;
-      text-align: right;
-    }
-    #{$base-class}-inputContainer + .sui-AtomLabel {
-      margin-left: $m-l;
-      text-align: left;
+    &-toggle {
+      .sui-AtomLabel {
+        margin-bottom: $m-l;
+      }
     }
   }
 
@@ -72,9 +69,69 @@ $base-class: '.sui-AtomSwitch';
     }
   }
 
+  &--color {
+    @each $color-name, $color-values in $c-atom-switch--active-array {
+      $bgc: map-get($color-values, bgc);
+      $bdc: map-get($color-values, bdc);
+      $bxsh: map-get($color-values, bxsh);
+      $outline-color: $c-primary;
+      $hover-mix-color: $c-white;
+      @if $color-name == 'surface' {
+        $outline-color: $c-white;
+        $hover-mix-color: $c-black;
+      }
+      &-#{$color-name} {
+        #{$self}-inputContainer {
+          &[aria-checked='false'] {
+            background-color: $c-atom-switch--default;
+            border: $bd-atom-switch-default;
+            &:hover {
+              &:not(:disabled, [data-read-only='true']) {
+                background-color: color-mix(in srgb, $c-atom-switch--default, $hover-mix-color 10%);
+              }
+            }
+            &:disabled {
+              background-color: transparentize($c-atom-switch--default, 0.3);
+            }
+          }
+          &[aria-checked='true'] {
+            border-color: $bdc;
+            background-color: $bgc;
+            &:hover {
+              transition-duration: 0ms;
+              &:not(:disabled, [data-read-only='true']) {
+                background-color: color-mix(in srgb, $bgc, $hover-mix-color 20%);
+              }
+            }
+            &:disabled {
+              background-color: transparentize($bgc, 0.3);
+            }
+            #{$self}-circle {
+              background-color: $c-atom-switch-circle;
+              box-shadow: $bxsh;
+            }
+          }
+          &[aria-checked='false'],
+          &[aria-checked='true'] {
+            #{$self}-circle {
+              background-color: $c-atom-switch-circle;
+            }
+            &:disabled {
+              #{$self}-circle {
+                background-color: $bgc-atom-switch-circle-disabled;
+                border: $bd-atom-switch-circle-disabled;
+              }
+            }
+            &:focus-visible {
+              outline: 2px solid transparentize($outline-color, 0.2);
+            }
+          }
+        }
+      }
+    }
+  }
+
   &-inputContainer {
-    background-color: $c-atom-switch--default;
-    border: $bd-atom-switch-default;
     border-radius: $w-atom-switch-default * 0.5;
     box-sizing: border-box;
     cursor: pointer;
@@ -83,41 +140,27 @@ $base-class: '.sui-AtomSwitch';
     outline: none;
     padding: 0;
     position: relative;
-    transition: margin-left $atom-switch-transition-time ease-in-out;
+    transition: margin-left $atom-switch-transition-time ease-in-out, background-color $atom-switch-transition-time ease;
     width: $w-atom-switch-default;
+    overflow: hidden;
 
-    &:focus {
-      #{$base-class}-circle {
-        border: $bd-atom-switch-circle--focus;
-        box-shadow: none;
-      }
-    }
     &[aria-checked='true']:focus-visible,
     &:focus-visible {
-      #{$base-class}-circle {
-        border: none;
-        box-shadow: 0 0 2px 2px color-variation($c-primary, 1);
-      }
+      box-shadow: none;
+      outline: 2px solid transparentize($c-primary, 0.2);
+      outline-offset: 2px;
     }
 
     &:disabled {
-      background-color: $bgc-atom-switch-disabled;
-      border: $bd-atom-switch-disabled;
       cursor: not-allowed;
 
       #{$base-class}-circle {
         background-color: $bgc-atom-switch-circle-disabled;
         border: $bd-atom-switch-circle-disabled;
       }
-
-      &[aria-checked='true'] {
-        background-color: $bgc-atom-switch-disabled--active;
-        border: $bd-atom-switch-disabled--active;
-      }
     }
     &[aria-checked='true'] {
-      background-color: $c-atom-switch--active;
-      border: $bdw-atom-switch-default solid $c-atom-switch--active;
+      border: $bdw-atom-switch-default solid color-variation($c-atom-switch--active, $c-dark-step);
       cursor: pointer;
       &:disabled {
         cursor: not-allowed;
@@ -132,16 +175,15 @@ $base-class: '.sui-AtomSwitch';
       }
 
       #{$base-class}-circle {
-        box-shadow: 2px 0 2px 0 $c-atom-switch--active-shadow;
+        box-shadow: 0 0 4px 1px $c-atom-switch--active-shadow;
       }
     }
 
     #{$base-class}-circle {
       box-sizing: border-box;
-      background-color: $c-atom-switch-circle;
+
       border-radius: ($h-atom-switch-default - 2) * 0.5;
-      border: $bd-atom-switch-circle;
-      box-shadow: $bxsh-atom-switch-circle;
+
       height: $h-atom-switch-circle-default - 2px;
       width: $w-atom-switch-circle-default - 2px;
       transition: margin-left $atom-switch-transition-time ease-in-out;
@@ -185,25 +227,31 @@ $base-class: '.sui-AtomSwitch';
       color: $bd-atom-switch-default;
     }
 
-    &--right {
-      &[aria-checked='true'] {
-        #{$base-class}-icon-left {
-          color: transparent;
-        }
+    &--position {
+      &-right {
+        &[aria-checked='true'] {
+          #{$base-class}-icon-left {
+            color: transparent;
+          }
 
+          #{$base-class}-icon-right {
+            color: $c-atom-switch--active;
+          }
+        }
+        #{$base-class}-circle {
+          margin-left: $m-atom-switch-circle-default--active;
+        }
         #{$base-class}-icon-right {
-          color: $c-atom-switch--active;
+          transition: color $atom-switch-transition-time ease-in-out $atom-switch-transition-time;
+        }
+        #{$base-class}-icon-left {
+          transition: color math.div($atom-switch-transition-time, 2) ease-in-out;
         }
       }
-      #{$base-class}-circle {
-        box-shadow: -2px 0 2px 0 $c-atom-switch--active-shadow;
-        margin-left: $m-atom-switch-circle-default--active;
-      }
-      #{$base-class}-icon-right {
-        transition: color $atom-switch-transition-time ease-in-out $atom-switch-transition-time;
-      }
-      #{$base-class}-icon-left {
-        transition: color math.div($atom-switch-transition-time, 2) ease-in-out;
+      &-left {
+        #{$base-class}-circle {
+          margin-left: 0;
+        }
       }
     }
   }
@@ -228,13 +276,20 @@ $base-class: '.sui-AtomSwitch';
             &Loading {
               height: $h-atom-switch-circle-loading-small;
               left: $l-atom-switch-circle-loading-small;
-              top: $t-atom-switch-circle-loading-small - 1px;
+              top: $t-atom-switch-circle-loading-small;
               width: $w-atom-switch-circle-loading-small;
             }
           }
-          &--right {
-            #{$base-class}-circle {
-              margin-left: $m-atom-switch-circle-small--active;
+          &--position {
+            &-right {
+              #{$base-class}-circle {
+                margin-left: $m-atom-switch-circle-small--active;
+              }
+            }
+            &-left {
+              #{$base-class}-circle {
+                margin-left: 0;
+              }
             }
           }
           #{$base-class}-icon-right,
@@ -263,9 +318,16 @@ $base-class: '.sui-AtomSwitch';
             height: $h-atom-switch-circle-large - 2px;
             width: $w-atom-switch-circle-large - 2px;
           }
-          &--right {
-            #{$base-class}-circle {
-              margin-left: $m-atom-switch-circle-large--active;
+          &--position {
+            &-right {
+              #{$base-class}-circle {
+                margin-left: $m-atom-switch-circle-large--active;
+              }
+            }
+            &-left {
+              #{$base-class}-circle {
+                margin-left: 0;
+              }
             }
           }
           #{$base-class}-icon-right,
