fix(components/atom/checkbox): add a11y defs

--- a/components/atom/checkbox/demo/index.scss
+++ b/components/atom/checkbox/demo/index.scss
@@ -1,4 +1,6 @@
 @import '~@s-ui/react-atom-icon/lib/index';
+@import '~@s-ui/react-atom-kbd/lib/index';
+@import '~@s-ui/react-primitive-visually-hidden/lib/index';
 
 @import '../src/index';
 
