feat(components/molecule/buttonGroup): Add new xsmall spacing

--- a/components/molecule/buttonGroup/src/styles/index.scss
+++ b/components/molecule/buttonGroup/src/styles/index.scss
@@ -7,6 +7,10 @@ $base-class: '.sui-MoleculeButtonGroup';
     display: flex;
   }
 
+  &--spaced-xsmall {
+    gap: $p-xs;
+  }
+
   &--spaced-small {
     gap: $g-s;
   }
